# 3DVoxelGame

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: FastNoise.h
res/: Credits.txt  GrassBlade.pos  tweaker.json
res/blocks/: dirt.json  grass.json  grass_blade.json  leaves.json  sand.json  stone.json  water.json  wood.json
res/shaders/: block_hotbar_select.frag  block_hotbar_select.vert  default_world.frag  default_world.vert  user_interface.frag  user_interface.vert
res/ui/: crosshair.json  hotbar.json  hotbar_item.json  hotbar_select.json
src/game1/: AABB.cpp  AABB.h  Camera.cpp  Camera.h  Constants.h  GameState.cpp  GameState.h  InputHandler.cpp  InputHandler.h  Random.cpp  Random.h  Settings.h  main.cpp
src/game1/entity/: Player.cpp  Player.h
src/game1/render/: Cube.cpp  Cube.h  CubeBuilder.cpp  CubeBuilder.h  Frustum.cpp  Frustum.h  GLObject.cpp  GLObject.h  GLSL_Shaders.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h
src/game1/ui/: GameInterface.cpp  GameInterface.h
src/game1/world/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  Decoration.cpp  Decoration.h  World.cpp  World.h
src/game1/world/biome/: Biome.cpp  Biome.h  BiomeLoader.cpp  BiomeLoader.h
